[package]
name = "rusty_units"
version = "0.1.0"
edition = "2021"
description = "A simple library for storing units of measurement in Rust."
license = "MIT OR Apache-2.0" 
readme = "README.md"
repository = "https://github.com/falOn-Dev/rusty_units"
keywords = ["units", "measurement", "rust"]


[dependencies]
paste = "1.0.15"
